--- a/app/css/app.css
+++ b/app/css/app.css
@@ -51,12 +51,9 @@
 }
 
 @media (max-width: 767px) {
-  .slide-preview .carousel-indicators:active,.slide-preview .carousel-indicators:hover {
-      display: none;
+  .navbar-inverse .navbar-brand {
+      overflow: hidden;
+      max-width: calc(100% - 60px);
   }
 }
-@media (min-width: 768px) {
-  .slide-preview .carousel-indicators:active,.slide-preview .carousel-indicators:hover {
-      opacity: 1;
-  }
-}
+
