--- a/app/css/app.css
+++ b/app/css/app.css
@@ -53,6 +53,7 @@
 @media (max-width: 767px) {
   .navbar-inverse .navbar-brand {
       overflow-x: hidden;
+      white-space: nowrap;
       max-width: calc(100% - 60px);
   }
 }
