--- a/app/css/app.css
+++ b/app/css/app.css
@@ -52,9 +52,11 @@
 
 @media (max-width: 767px) {
   .navbar-inverse .navbar-brand {
-      overflow-x: hidden;
       white-space: nowrap;
       max-width: calc(100% - 60px);
+  }
+  .navbar-inverse .navbar-brand span{
+      overflow: hidden;
   }
 }
 
