--- a/app/css/main.css
+++ b/app/css/main.css
@@ -197,4 +197,5 @@ a.dropdown-toggle {
 	padding-top: 65px;
 	padding-bottom: 60px;
 	background-image: url("../images/bg_header.jpg");
+	min-height: 100vh;
 }
