--- a/app/css/main.css
+++ b/app/css/main.css
@@ -197,8 +197,12 @@ a.dropdown-toggle {
 .bloglist {
 	padding-top: 70px;
 	padding-bottom: 60px;
-	background-image: url("../images/bg_header.jpg");
 	min-height: 100vh;
+	background: url(images/bg_header.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 a{
