--- a/app/css/main.css
+++ b/app/css/main.css
@@ -213,28 +213,31 @@ html,body,.content-div {
 	height: 100%;
 }
 
-.home-outer {
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
 @media (max-height: 484px) {
 	.home-outer {
 		margin-top: 70px;
 	}
 }
 
-.home-middle {
-    display: table-cell;
-    vertical-align: middle;
+@media (min-height: 485px) {
+	.home-outer {
+	    display: table;
+	    position: absolute;
+	    height: 100%;
+	    width: 100%;
+	}
+
+	.home-middle {
+	    display: table-cell;
+	    vertical-align: middle;
+	}
+	
+	.home-inner {
+	    margin-left: auto;
+	    margin-right: auto; 
+	}
 }
 
-.home-inner {
-    margin-left: auto;
-    margin-right: auto; 
-}
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     width: 100%;
