changes from home

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -220,13 +220,13 @@ html,body,.content-div {
     width: 100%;
 }
 
-@media (max-height: 484px || max-width: 484px) {
+@media (max-height: 484px), (max-width: 484px) {
 	.home-outer {
 		padding-top: 70px;
 	}
 }
 
-@media (min-height: 485px && min-width: 484px) {
+@media (min-height: 485px) and (min-width: 484px) {
 	.home-middle {
 	    display: table-cell;
 	    vertical-align: middle;
