--- a/app/css/main.css
+++ b/app/css/main.css
@@ -275,4 +275,13 @@ html,body,.content-div {
 
 img.media-image{
 	max-width: 200px;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    margin: 30px 0;
+    padding: 10px;
+    background: #FFF;
+    border: 1px solid #CCC;
+    position: relative;
+    display: block;
 }
