--- a/app/css/main.css
+++ b/app/css/main.css
@@ -278,7 +278,7 @@ img.media-image{
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    margin: 30px 0;
+    /*margin: 30px 0;*/
     padding: 3px;
     background: #FFF;
     border: 1px solid #CCC;
