--- a/app/css/main.css
+++ b/app/css/main.css
@@ -299,6 +299,20 @@ img.skype-lessons-image{
     display: block;
 }
 
+img.yoga-image{
+	max-width: 300px;
+    -webkit-box-shadow: 1 0 5px rgba(100, 100, 100, 0.5);
+    -moz-box-shadow: 1 0 5px rgba(100,100,100,0.5);
+    box-shadow: 1 0 5px rgba(100, 100, 100, 0.5);
+    /*margin: 30px 0;
+    padding: 3px;*/
+    border-radius: 10px;
+    background: #FFF;
+    /*border: 1px solid #CCC;*/
+    position: relative;
+    display: block;
+}
+
 .team-member {
     margin-bottom: 50px;
     text-align: center;
