--- a/app/css/main.css
+++ b/app/css/main.css
@@ -311,6 +311,7 @@ img.yoga-image{
     /*border: 1px solid #CCC;*/
     position: relative;
     display: block;
+    margin: 10px;
 }
 
 .team-member {
