--- a/app/css/main.css
+++ b/app/css/main.css
@@ -341,7 +341,7 @@ img.yoga-image{
 
 img.langauge-selector {
 	border-radius: 10px;
-	border: 1px dotted;
+	border: 1px solid;
 	color:transparent;
 }
 
