--- a/app/css/main.css
+++ b/app/css/main.css
@@ -201,7 +201,7 @@ a.dropdown-toggle {
 	padding: 3px;
 }
 
-.musicSongsList {
+div.musicSongsList {
     background-color: rgba(244, 244, 244, 0.5);
 }
 
