--- a/app/css/main.css
+++ b/app/css/main.css
@@ -186,8 +186,6 @@ a.dropdown-toggle {
 	padding: 3px 6px;
 	color: rgba(255, 255, 255, 0.6);
 	font-size: xx-small;
-	box-shadow: 0px 0px 0px 2px rgba(50, 50, 50, 0.5) inset;
-	border-radius: 7px;
 }
 
 .musicPlayButton:hover,
@@ -197,6 +195,8 @@ a.dropdown-toggle {
 
 .musicListPlayButton{
 	padding: 3px 6px;
+	box-shadow: 0px 0px 0px 2px rgba(50, 50, 50, 0.5) inset;
+	border-radius: 7px;
 }
 
 .musicSongBox{
@@ -207,6 +207,11 @@ div.musicSongsList {
     background-color: rgba(244, 244, 244, 0.5);
     font-family: "Poiret One",cursive;
 	color: black;
+}
+
+h3.musicTitle{
+	font-family: "Poiret One",cursive;
+	margin-top: 10px;
 }
 
 .bloglist {
