make expeditions container looks like a ship

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -160,6 +160,9 @@ a.dropdown-toggle {
         padding-right: 150px;
         padding-left: 50px;
     }
+    .expeditions-header {
+        margin-top: 10px;
+    }
 }
 /* Indicators list style */
 .slide-preview .carousel-indicators li {
