make expeditions container looks like a ship

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -160,7 +160,7 @@ a.dropdown-toggle {
         padding-right: 150px;
         padding-left: 50px;
     }
-    .expeditions-header {
+    h2.expeditions-header {
         margin-top: 10px;
     }
 }
