--- a/app/css/main.css
+++ b/app/css/main.css
@@ -159,6 +159,7 @@ a.dropdown-toggle {
         border-radius: 10px 10px 400px 250px;
         padding-right: 150px;
         padding-left: 50px;
+        border: 4px solid #eee;
     }
     h2.expeditions-header {
         margin-top: 10px;
