add sailboat on mainpage button

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -435,8 +435,10 @@ img.langauge-selector:hover
 
 .btn-main {
     padding: 15px 65px;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     line-height: 1.33;
-    border-radius: 12px;
+    border-radius: 150px;
+    width: 300px;
+    height: 300px;
 }
