--- a/app/css/main.css
+++ b/app/css/main.css
@@ -156,9 +156,12 @@ a.dropdown-toggle {
 	    opacity: 1;
 	}
     .expeditions-container {
-        border-radius: 10px 10px 400px 250px;
+        /*border-radius: 10px 10px 400px 250px;
         padding-right: 150px;
-        padding-left: 50px;
+        padding-left: 50px;*/
+        border-radius: 20px 20px 30px 30px;
+        padding-right: 20px;
+        padding-left: 20px;
         border: 4px solid #eee;
     }
     h2.expeditions-header {
