--- a/app/css/app.css
+++ b/app/css/app.css
@@ -52,15 +52,17 @@
 
 @media (max-width: 767px) {
   .navbar-inverse .navbar-brand {
-    white-space: nowrap;
+    /*white-space: nowrap;*/
     max-width: calc(100% - 60px);
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
   .navbar-inverse .navbar-brand img{
     position:absolute;
   }
   .navbar-inverse .navbar-brand span{
     padding-left: 35px;
+    display: block;
+    margin-top: -11px;
   }
   
   /* menu on the right in mobile version */
