--- a/app/css/app.css
+++ b/app/css/app.css
@@ -68,6 +68,7 @@
   /* menu on the right in mobile version */
   .navbar-inverse {
     background: none;
+    border-bottom: none;
   }
   .navbar-inverse .navbar-header {
     background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.5);
@@ -80,6 +81,7 @@
   .navbar-inverse .navbar-brand {
     font-size: 16px;
   }
+
 }
 
 .well-trans {
