--- a/app/css/main.css
+++ b/app/css/main.css
@@ -83,6 +83,7 @@ img.pull-left { margin-right: 10px; }
 .navbar-inverse {
 	background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.5);
     min-height: 50px;
+    max-height: 95px;
     padding-top: 13px;
 }
 
